# osgeo4win

./: README.md
setup/: configure.ac  prereq.h  propsheet.cc  res_ru.rc  res_ua.rc  setup.exe.manifest  setup.hint  setup64.exe.manifest
setup/.svn/: wc.db
setup/osgeo4w/: package.cmd
